projects/vb6parse/snapshots/parsers/cst/type_hinting/deftype_statements/deftype_defbool.snap
---
source: projects/vb6parse/tests/type_hinting/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefBoolKeyword
          text: DefBool
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: B
        - kind: Newline
          text: "\n"
