projects/vb6parse/snapshots/parsers/cst/type_hinting/deftype_statements/deftype_defbyte.snap
---
source: projects/vb6parse/tests/type_hinting/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefByteKeyword
          text: DefByte
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: B
        - kind: Newline
          text: "\n"
