projects/vb6parse/snapshots/parsers/cst/type_hinting/deftype_statements/deftype_defcur.snap
---
source: projects/vb6parse/tests/type_hinting/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefCurKeyword
          text: DefCur
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: C
        - kind: Newline
          text: "\n"
