projects/vb6parse/snapshots/parsers/cst/type_hinting/deftype_statements/deftype_defdec.snap
---
source: projects/vb6parse/tests/type_hinting/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefDecKeyword
          text: DefDec
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: D
        - kind: Newline
          text: "\n"
