projects/vb6parse/snapshots/parsers/cst/type_hinting/deftype_statements/deftype_defint_single_letter.snap
---
source: projects/vb6parse/tests/type_hinting/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefIntKeyword
          text: DefInt
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: I
        - kind: Newline
          text: "\n"
