projects/vb6parse/snapshots/parsers/cst/type_hinting/deftype_statements/deftype_deflng_multiple_ranges.snap
---
source: projects/vb6parse/tests/type_hinting/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefLngKeyword
          text: DefLng
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: L
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: M
        - kind: SubtractionOperator
          text: "-"
        - kind: Identifier
          text: N
        - kind: Newline
          text: "\n"
