projects/vb6parse/snapshots/parsers/cst/type_hinting/deftype_statements/deftype_defsng.snap
---
source: projects/vb6parse/tests/type_hinting/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefSngKeyword
          text: DefSng
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: F
        - kind: SubtractionOperator
          text: "-"
        - kind: Identifier
          text: G
        - kind: Newline
          text: "\n"
